--- a/trunk/Enterprise/grails-app/i18n/messages.properties
+++ b/trunk/Enterprise/grails-app/i18n/messages.properties
@@ -53,3 +53,15 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+forumgrails.courseList=Course list
+forumgrails.courseName=Course name
+forumgrails.information=Information
+forumgrails.arguments=Arguments
+forumgrails.threads=Threads
+forumgrails.posts=Posts
+forumgrails.addNewCourse=Add a new course
+forumgrails.coursesCount=Total of {0} courses.
+forumgrails.nothing=
+forumgrails.login=Login
+forumgrails.remove=Remove {0}
