--- a/trunk/Enterprise/grails-app/i18n/messages_it.properties
+++ b/trunk/Enterprise/grails-app/i18n/messages_it.properties
@@ -22,8 +22,8 @@ forumgrails.courseList=Lista dei corsi
 forumgrails.courseName=Nome corso
 forumgrails.information=Informazioni
 forumgrails.arguments=Argomenti
-forumgrails.threads=Thread
-forumgrails.posts=Post
+forumgrails.threads=Discussioni
+forumgrails.posts=Risposte
 forumgrails.addNewCourse=Aggiungi un nuovo corso
 forumgrails.coursesCount=Ci sono {0} corsi in totale.
 forumgrails.nothing=
