--- a/Enterprise/grails-app/i18n/messages.properties
+++ b/Enterprise/grails-app/i18n/messages.properties
@@ -65,3 +65,4 @@ forumgrails.coursesCount=Total of {0} courses.
 forumgrails.nothing=
 forumgrails.login=Login
 forumgrails.remove=Remove {0}
+forumgrails.language=Language
