--- a/trunk/Enterprise/grails-app/i18n/messages_it.properties
+++ b/trunk/Enterprise/grails-app/i18n/messages_it.properties
@@ -29,3 +29,4 @@ forumgrails.coursesCount=Ci sono {0} corsi in totale.
 forumgrails.nothing=
 forumgrails.login=Accedi
 forumgrails.remove=Rimuovi {0}
+forumgrails.language=Lingua
