--- a/trunk/Enterprise/grails-app/i18n/messages.properties
+++ b/trunk/Enterprise/grails-app/i18n/messages.properties
@@ -66,3 +66,5 @@ forumgrails.nothing=
 forumgrails.login=Login
 forumgrails.remove=Remove {0}
 forumgrails.language=Language
+forumgrails.italian=Italian
+forumgrails.english=English
