--- a/trunk/Enterprise/grails-app/i18n/messages_it.properties
+++ b/trunk/Enterprise/grails-app/i18n/messages_it.properties
@@ -30,3 +30,5 @@ forumgrails.nothing=
 forumgrails.login=Accedi
 forumgrails.remove=Rimuovi {0}
 forumgrails.language=Lingua
+forumgrails.italian=Italiano
+forumgrails.english=Inglese
