- added user roles (user, mod, admin) - added 3 users in total, check the debug window to see username and passwords - added ticker showing the currently logged user name - implemented role checking in Course.list page - added translations

--- a/Enterprise/grails-app/i18n/messages_it.properties
+++ b/Enterprise/grails-app/i18n/messages_it.properties
@@ -32,3 +32,5 @@ forumgrails.remove=Rimuovi {0}
 forumgrails.language=Lingua
 forumgrails.italian=Italiano
 forumgrails.english=Inglese
+forumgrails.notLoggedIn=Non connesso
+forumgrails.currentlyLogged=Connesso come {0} con ruolo {1}
