--- a/trunk/Enterprise/grails-app/i18n/messages.properties
+++ b/trunk/Enterprise/grails-app/i18n/messages.properties
@@ -68,3 +68,5 @@ forumgrails.remove=Remove {0}
 forumgrails.language=Language
 forumgrails.italian=Italian
 forumgrails.english=English
+forumgrails.notLoggedIn=Not logged in
+forumgrails.currentlyLogged=Connected as {0} with role {1}
