--- a/trunk/Enterprise/grails-app/i18n/messages_it.properties
+++ b/trunk/Enterprise/grails-app/i18n/messages_it.properties
@@ -32,3 +32,5 @@ forumgrails.remove=Rimuovi {0}
 forumgrails.language=Lingua
 forumgrails.italian=Italiano
 forumgrails.english=Inglese
+forumgrails.notLoggedIn=Non connesso
+forumgrails.currentlyLogged=Connesso come {0} con ruolo {1}
