--- a/trunk/Enterprise/grails-app/i18n/messages.properties
+++ b/trunk/Enterprise/grails-app/i18n/messages.properties
@@ -70,3 +70,5 @@ forumgrails.italian=Italian
 forumgrails.english=English
 forumgrails.notLoggedIn=Not logged in
 forumgrails.currentlyLogged=Connected as {0} with role {1}
+forumgrails.addArgument=Add argument to {0}
+forumgrails.addThread=Add thread to {0}
