--- a/trunk/Enterprise/grails-app/i18n/messages_it.properties
+++ b/trunk/Enterprise/grails-app/i18n/messages_it.properties
@@ -34,3 +34,5 @@ forumgrails.italian=Italiano
 forumgrails.english=Inglese
 forumgrails.notLoggedIn=Non connesso
 forumgrails.currentlyLogged=Connesso come {0} con ruolo {1}
+forumgrails.addArgument=Aggiungi argomento a {0}
+forumgrails.addThread=Aggiungi discussione a {0}
