modifica show e add

--- a/Enterprise/grails-app/i18n/messages.properties
+++ b/Enterprise/grails-app/i18n/messages.properties
@@ -72,3 +72,15 @@ forumgrails.notLoggedIn=Not logged in
 forumgrails.currentlyLogged=Connected as {0} with role {1}
 forumgrails.addArgument=Add argument to {0}
 forumgrails.addThread=Add thread to {0}
+forumgrails.name=Name
+forumgrails.addNewArgument= Add a new argument
+forumgrails.argumentsw= Arguments view
+forumgrails.threadName=Thread name
+forumgrails.addNewThread= Add a new thread
+forumgrails.argument=Argument
+forumgrails.title = Title
+forumgrails.text = Text
+forumgrails.threadw = Threads view
+forumgrails.user = User
+forumgrails.date = Date
+forumgrails.coursew = Courses view
