--- a/Enterprise/grails-app/i18n/messages_it.properties
+++ b/Enterprise/grails-app/i18n/messages_it.properties
@@ -36,3 +36,15 @@ forumgrails.notLoggedIn=Non connesso
 forumgrails.currentlyLogged=Connesso come {0} con ruolo {1}
 forumgrails.addArgument=Aggiungi argomento a {0}
 forumgrails.addThread=Aggiungi discussione a {0}
+forumgrails.name=Nome
+forumgrails.addNewArgument= Aggiungi un nuovo argomento
+forumgrails.argumentsw= Vista argomenti
+forumgrails.threadName=Nome discussione
+forumgrails.addNewThread= Aggiungi una nuova discussione
+forumgrails.argument=Argomento
+forumgrails.title = Titolo
+forumgrails.text = Testo
+forumgrails.threadw = Vista discussioni
+forumgrails.user = Utente
+forumgrails.date = Data
+forumgrails.coursew = Vista corsi
