aggiunta  add post

--- a/Enterprise/grails-app/i18n/messages_it.properties
+++ b/Enterprise/grails-app/i18n/messages_it.properties
@@ -38,13 +38,17 @@ forumgrails.addArgument=Aggiungi argomento a {0}
 forumgrails.addThread=Aggiungi discussione a {0}
 forumgrails.name=Nome
 forumgrails.addNewArgument= Aggiungi un nuovo argomento
-forumgrails.argumentsw= Vista argomenti
+forumgrails.argumentsView= Vista argomenti
 forumgrails.threadName=Nome discussione
 forumgrails.addNewThread= Aggiungi una nuova discussione
 forumgrails.argument=Argomento
 forumgrails.title = Titolo
 forumgrails.text = Testo
-forumgrails.threadw = Vista discussioni
+forumgrails.threadsView = Vista discussioni
 forumgrails.user = Utente
 forumgrails.date = Data
-forumgrails.coursew = Vista corsi
+forumgrails.coursesView = Vista corsi
+forumgrails.argumentName=Nome argomento
+forumgrails.thread = Discussione
+forumgrails.addNewPosts = Aggiungi un nuovo post
+forumgrails.addPost = Aggiungi un nuovo post
