--- a/trunk/Enterprise/grails-app/i18n/messages.properties
+++ b/trunk/Enterprise/grails-app/i18n/messages.properties
@@ -74,13 +74,17 @@ forumgrails.addArgument=Add argument to {0}
 forumgrails.addThread=Add thread to {0}
 forumgrails.name=Name
 forumgrails.addNewArgument= Add a new argument
-forumgrails.argumentsw= Arguments view
+forumgrails.argumentsView= Arguments view
 forumgrails.threadName=Thread name
 forumgrails.addNewThread= Add a new thread
 forumgrails.argument=Argument
 forumgrails.title = Title
 forumgrails.text = Text
-forumgrails.threadw = Threads view
+forumgrails.threadsView = Threads view
 forumgrails.user = User
 forumgrails.date = Date
-forumgrails.coursew = Courses view
+forumgrails.coursesView = Courses view
+forumgrails.argumentName=Argument name
+forumgrails.thread = Thread
+forumgrails.addNewPosts = Add a new post
+forumgrails.addPost = Add a new post
